--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DỰ ÁN 5</title>
+    <title>Bài 20</title>
   </head>
   <body>
-    <h1>Làm đến cùng và thành công</h1>
+    Học thẻ <code class="language html">&lt;table&gt;&lt;/table&gt;</code>
   </body>
 </html>
