--- a/index.html
+++ b/index.html
@@ -15,5 +15,52 @@
     </h3>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <table>
+      <thead>
+        <tr>
+          <th>Tên sản phẩm</th>
+          <th>Giá tiền</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Áo phông</td>
+          <td>100.000 vnđ</td>
+        </tr>
+        <tr>
+          <td>Quần jean</td>
+          <td>200.000 vnđ</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>Tổng cộng</td>
+          <td>300.000 vnđ</td>
+        </tr>
+      </tfoot>
+    </table>
+    <hr />
+    <table>
+      <tr>
+        <td>7</td>
+        <td>8</td>
+        <td>9</td>
+        <td>DEL</td>
+        <td>AC</td>
+      <tr>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>*</td>
+        <td>/</td>
+      </tr>   
+      <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>+</td>
+        <td>-</td>
+      </tr>
+
   </body>
 </html>
